--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
                   details.innerHTML = `-`;
                   state.innerHTML = `-`;
 
+                  smallImage.src = "https://discordapp.com/assets/1c8a54f25d101bdc607cec7228247a9a.svg";
+
                 }
 
               })
