--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                       <div class="info__header">Playing a game</div>
                       <div class="info__game">
                         <div class="game__icon">
-                          <img class="game" id="largeImage">
+                          <img class="game" id="largeImage" style="-webkit-mask: url('../img/mask.svg'); mask: url('../img/mask.svg');">
                           <img class="status-icon" id="smallImage">
                         </div>
                         <div class="game__content">
