--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                       .then(function(data) {
                   return data.map(function(data) {
     
-                    array.forEach(element => {
+                    data.forEach(element => {
                       repos.innerHTML += element.full_name;
                     });
     
