--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
                       .then(function(data) {
                   return data.map(function(data) {
     
-                    data.forEach(element => {
-                      repos.innerHTML += element.full_name;
-                    });
+                    repos.innerHTML += data.full_name;
     
                   })
                 })
