--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
                       .then(function(data) {
                   return data.map(function(data) {
     
-                    for(var i=0; i <= data.length; i++) {
-                    repos.innerHTML += data.full_name;
-                    }
+                    repos.innerHTML += data.full_name.join(" ");
     
                   })
                 })
