--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                       .then((res) => { return res.json() })
                       .then(function(data) {
                   return data.map(function(data) {
-                    
+
                     let p = createNode('p');
 
-                    p.innerHTML += data.full_name;
+                    p.innerHTML = data.full_name;
     
                   })
                 })
