--- a/index.html
+++ b/index.html
@@ -161,15 +161,14 @@
     </section>
 
     <section class="container" id="">
-        <div class="box-container row">
-          <div class="one-full column">
-            <h1 class="emerald-text">Organizations</h1></div>
-              <div class="one-full column" style="display: flex;" id="orgs">
-                <script src="js/organizations.js"></script>
-                </div>
+      <div class="box-container row">
+        <h1 class="emerald-text">Organizations</h1>
+          <div class="one-full column" style="display: flex;" id="orgs">
+            <script src="js/organizations.js"></script>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
     <footer class="center box-container primary no-border-radius">
       <p class="no-margin">
