--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
       </div>
 
       <div class="box-container row">
-        <div class="one-full column"><h1 class="emerald-text">Projects</h1></div>
         <div class="one-full column">
-          <p><a href="https://github.com/TheDropX/Presences" target="_blank">TheDropX/Presences</a></p>
-          <p><a href="https://github.com/TheDropX/API" target="_blank">TheDropX/API</a></p>
+          <h1 class="emerald-text">Projects</h1>
+        </div>
+        <div class="one-full column" id="repos">
+          <script src="js/repositories.js"></script>
         </div>
       </div>
     </section>
