--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <div class="discord-usercard">
                 <div  class="usercard__header">
-                  <div class="header__avatar" style="background-image: url('https://cdn.discordapp.com/avatars/293828021134295040/f2d63c90ab2d4705d1f12847d7198035.png?size=2048');"></div>
+                  <div class="header__avatar" style="background-image: url('https://cdn.discordapp.com/avatars/293828021134295040/f2d63c90ab2d4705d1f12847d7198035.png?size=2048');"><span id="status"></span></div>
                   <div class="header__info">
                     <div class="info__nameTag">
                       <span class="username" id="username"></span>
