--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <section class="container" id="information">
       <div class="box-container row">
-        <div class="one-full column"><h1 class="emerald-text">Informations</h1></div>
+        <div class="one-full column"><h1 class="emerald-text">About me</h1></div>
         <div class="one-full column">
           <p>
             Hello, my name is <span class="emerald-text">Alex</span>, but known as <span class="emerald-text">TheDrop.</span> over the internet.
